--- a/assets/css/sass/screen.scss
+++ b/assets/css/sass/screen.scss
@@ -4,12 +4,26 @@
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
 @import url('https://fonts.googleapis.com/css?family=Tajawal:200,300,400,500,700,800,900&display=swap&subset=arabic');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap');
 //@import "compass/reset";
 @import "queries";
 body {
     // background-image: linear-gradient(315deg, #f6f6f6 0%, #e9e9e9 74%);
-    font-family: 'Tajawal', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     overflow-x: hidden;
+    &.overlay {
+        transition: 0.3s;
+        overflow: hidden;
+        &:after {
+            content: "";
+            position: fixed;
+            left: 0px;
+            top: 0px;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.4);
+        }
+    }
 }
 
 $themeColor-light: #FFC000;
@@ -51,6 +65,10 @@ $themeColor-dark: #FD9D00;
 
 .h-screen-85 {
     height: 85vh;
+}
+
+.h-20rem {
+    height: 20rem;
 }
 
 .border-w-trans-2 {
@@ -227,10 +245,10 @@ $themeColor-dark: #FD9D00;
     .swiper-pagination-bullet {
         background: none;
         margin-left: 5px;
-        font-size: 22px;
+        font-size: 18px;
         width: 30px;
         height: 30px;
-        line-height: 36px;
+        line-height: 26px;
         color: black;
         opacity: 1;
         font-weight: 500;
@@ -409,3 +427,30 @@ $themeColor-dark: #FD9D00;
 }
 
 // =============== POPup style end ===============
+// =============== Menu Page Start ===============
+.filtermenu-side {
+    left: -900px;
+    transition: 0.3s;
+    &.active {
+        left: 0px;
+    }
+    @include screentwo-max {
+        box-shadow: 0 20px 25px -5px rgba(0, 0, 0, .1), 17px -11px 15px 5px rgba(0, 0, 0, .04);
+    }
+    &::-webkit-scrollbar {
+        width: 0px;
+    }
+    &::-webkit-scrollbar-track {
+        background: white;
+    }
+    /* Handle */
+    &::-webkit-scrollbar-thumb {
+        background: lightgray;
+    }
+    /* Handle on hover */
+    &::-webkit-scrollbar-thumb:hover {
+        background: gray;
+    }
+}
+
+// =============== Menu Page End ===============
