demo bar added with changes

--- a/assets/css/sass/screen.scss
+++ b/assets/css/sass/screen.scss
@@ -406,23 +406,49 @@ $themeColor-dark: #FD9D00;
     justify-content: center!important;
 }
 
+body.front-page {
+    .swal2-popup {
+        background: none;
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        background-image: linear-gradient(190deg, $themeColor 0%, darken($themeColor-dark, 15%) 100%)!important;
+        .swal2-title {
+            color: black;
+            text-align: left;
+            margin: 0px!important;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+        }
+        .swal2-styled.swal2-confirm {
+            background-image: linear-gradient(190deg, $themeColor 0%, darken($themeColor-dark, 15%) 100%)!important;
+        }
+        .swal2-input {
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            color: white;
+            font-family: sans-serif;
+            &:focus {
+                outline: none;
+            }
+        }
+    }
+}
+
 .swal2-popup {
-    background: none;
     border: 1px solid rgba(255, 255, 255, 0.3);
-    ;
-    background-image: linear-gradient(190deg, $themeColor 0%, darken($themeColor-dark, 15%) 100%)!important;
     .swal2-title {
-        color: black;
+        color: rgba(0, 0, 0, 0.9);
         text-align: left;
         margin: 0px!important;
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1)
     }
     .swal2-styled.swal2-confirm {
-        background-image: linear-gradient(190deg, $themeColor 0%, darken($themeColor-dark, 15%) 100%)!important;
+        background-color: black;
     }
     .swal2-input {
-        border: 1px solid rgba(255, 255, 255, 0.3);
+        border: 1px solid rgba(0, 0, 0, 0.3);
         color: white;
         font-family: sans-serif;
+        &:focus {
+            outline: none;
+        }
     }
 }
 
@@ -454,3 +480,30 @@ $themeColor-dark: #FD9D00;
 }
 
 // =============== Menu Page End ===============
+// =============== Single Menu Start ===============
+.rating {
+    unicode-bidi: bidi-override;
+    direction: rtl;
+    text-align: left;
+}
+
+.rating>span {
+    display: inline-block;
+    position: relative;
+    width: 1.1em;
+}
+
+.rating span.star:hover:before,
+.rating span.star:hover~span:before {
+    content: "\2605";
+    position: absolute;
+    color: $themeColor;
+}
+
+.content {
+    p {
+        margin-bottom: 15px;
+    }
+}
+
+// =============== Single Menu End ===============
